exports[`logReducer should return initial state if state is undefined 1`] = `
Object {
  "enabled": false,
  "events": Array [],
}
`;

exports[`logReducer should set a new object in events if enabled=true 1`] = `
Object {
  "enabled": true,
  "events": Array [
    Object {
      "message": "my message",
      "origin": "some origin",
      "time": 12345,
      "type": "INFO",
    },
  ],
}
`;

exports[`logReducer should set enabled to true 1`] = `
Object {
  "enabled": true,
  "events": Array [],
}
`;

exports[`logReducer should set events to empty object 1`] = `
Object {
  "enabled": true,
  "events": Array [],
}
`;
